--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,19 +4,22 @@ ENV LANG C.UTF-8
 ENV TZ Asia/Tokyo
 
 RUN apt-get update -qq \
-&& apt-get install -y --no-install-recommends ca-certificates curl gnupg \
-&& mkdir -p /etc/apt/keyrings \
-&& curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-&& echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
-&& curl -fsSL https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor -o /etc/apt/keyrings/yarn.gpg \
-&& echo "deb [signed-by=/etc/apt/keyrings/yarn.gpg] https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
-&& apt-get update -qq \
-&& apt-get install -y --no-install-recommends build-essential libpq-dev nodejs yarn vim \
+&& apt-get install -y --no-install-recommends \
+    curl gnupg build-essential libpq-dev vim \
+&& curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+&& apt-get install -y nodejs \
+&& npm install -g yarn@1.22.22 \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir /myapp
 WORKDIR /myapp
+
 RUN gem install bundler
 
-COPY . /myapp
+COPY Gemfile Gemfile.lock ./
+RUN bundle install
+
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
+
+COPY . .
