--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: one
-  date: 2025-06-11
-  body: MyText
+  title: MyString
 
 two:
-  user: two
-  date: 2025-06-11
-  body: MyText
+  title: MyString
