--- a/compose.yml
+++ b/compose.yml
@@ -17,8 +17,8 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    command: bash -c "bundle install && bundle exec rails db:prepare && rm -f tmp/pids/server.pid && ./bin/dev"
+      dockerfile: Dockerfile.devdoc
+    command: bash -c "bundle install && bundle exec rails db:prepare && rm -f tmp/pids/server.pid && rails server -b '0.0.0.0'"
     tty: true
     stdin_open: true
     volumes:
