--- a/compose.yml
+++ b/compose.yml
@@ -17,7 +17,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.devdoc
+      dockerfile: Dockerfile.dev
     command: bash -c "bundle install && bundle exec rails db:prepare && rm -f tmp/pids/server.pid && rails server -b '0.0.0.0'"
     tty: true
     stdin_open: true
