--- a/compose.yml
+++ b/compose.yml
@@ -4,13 +4,14 @@ services:
     restart: always
     environment:
       TZ: Asia/Tokyo
+      POSTGRES_USER: postgres  # ← 明示した方が後で混乱しない
       POSTGRES_PASSWORD: password
     volumes:
       - postgresql_data:/var/lib/postgresql/data
     ports:
       - 5433:5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d myapp_development -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
